estilização e cor de fundo

--- a/index.html
+++ b/index.html
@@ -8,14 +8,7 @@
 </head>
 <body>
     <h1 class="lead border border-bottom">Olá mundo!</h1>
-    <p class="btn ">Estamos no CIEBP</p>
-
-
-
-
-
-
-
+    <p class="btn btn-primary">Estamos no CIEBP</p>
 
 
 
